@@ -1,20 +1,17 @@
-#########
-# Author:        rmp
-# Created:       2006-10-31
-#
 package npg::model::run_status;
+
 use strict;
 use warnings;
-use base qw(npg::model);
 use English qw(-no_match_vars);
 use Carp;
-use npg::model::user;
-use npg::model::run;
-use npg::model::run_status_dict;
-use npg::model::event;
 use Date::Parse;
 use DateTime;
 use Readonly;
+
+use npg::model::event;
+use npg::model::run_status_dict;
+
+use base qw(npg::model);
 
 our $VERSION = '0';
 
@@ -41,11 +38,6 @@ sub fields {
             id_run_status_dict
             id_user
             iscurrent);
-}
-
-sub epoch {
-  my $self = shift;
-  return str2time($self->date());
 }
 
 sub create {
@@ -120,55 +112,6 @@ sub create {
 
   return 1;
 }
-
-sub current_run_statuses {
-  my ($self, $limit) = @_;
-
-  if(!$self->{'current_run_statuses'}) {
-    my $query = qq(SELECT @{[join q(, ), $self->fields()]}
-                   FROM   @{[$self->table()]}
-                   WHERE iscurrent = 1
-                   ORDER BY date DESC);
-    if($limit) {
-      $query .= qq( LIMIT $limit);
-    }
-    $self->{'current_run_statuses'} = $self->gen_getarray(ref $self, $query);
-  }
-
-  return $self->{'current_run_statuses'};
-}
-
-sub latest_current_run_status {
-  my $self = shift;
-
-  if(!$self->{'latest_run_status'}) {
-    my $query = qq(SELECT @{[join q(, ), $self->fields()]}
-                   FROM   @{[$self->table()]}
-                   WHERE  iscurrent = 1
-                   ORDER BY date DESC
-                   LIMIT 1);
-    $self->{'latest_run_status'} = $self->gen_getarray(ref $self, $query)->[0];
-  }
-
-  return $self->{'latest_run_status'};
-}
-
-sub active_runs_over_last_30_days {
-  my $self = shift;
-
-  if (!$self->{'active_runs_over_last_30_days'}) {
-    my $query = q{SELECT id_run, date
-                  FROM   run_status
-                  WHERE date > DATE_SUB(NOW(), INTERVAL 30 DAY)
-                  AND   id_run_status_dict in (SELECT id_run_status_dict
-                                               FROM   run_status_dict
-                                               WHERE  description in ('run in progress', 'run on hold', 'run complete'))
-                  ORDER BY date};
-    $self->{'active_runs_over_last_30_days'} = $self->gen_getarray(ref $self, $query);
-  }
-  return $self->{'active_runs_over_last_30_days'};
-}
-
 
 sub potentially_stuck_runs {
   my ( $self ) = @_;
@@ -253,10 +196,6 @@ npg::model::run_status
 
   my $oRunStatusDict = $oRunStatus->run_status_dict();
 
-=head2 epoch - POSIX epoch time based on the run_status's date
-
-  my $iEpoch = $oRunStatus->epoch();
-
 =head2 create - special handling for dates & iscurrent
 
   $oRunStatus->create();
@@ -264,18 +203,6 @@ npg::model::run_status
   Sets date using database's now() function
   Sets all other run_status for this id_run to iscurrent=0
   Sets this iscurrent=1 (whatever was set/unset in the object);
-
-=head2 current_run_statuses - arrayref of npg::model::run_status with iscurrent = 1
-
-  my $arCurrentRunStatuses = $oRunStatus->current_run_statuses();
-
-=head2 latest_current_run_status - the most recent npg::model::run_status with iscurrent = 1
-
-  my $oLatestCurrentRunStatus = $oRunStatus->latest_current_run_status();
-
-=head2 active_runs_over_last_30_days - retrieve active runs from each of the last 30 days, sorted by date
-
-  my $active_runs_over_last_30_days = $oRunStatus->active_runs_over_last_30_days();
 
 =head2 potentially_stuck_runs
 
@@ -320,13 +247,9 @@ You get back a hashref as follows
 
 =item Carp
 
-=item npg::model::user
-
-=item npg::model::run
+=item npg::model::event
 
 =item npg::model::run_status_dict
-
-=item npg::model::event
 
 =item Date::Parse
 
@@ -338,11 +261,17 @@ You get back a hashref as follows
 
 =head1 AUTHOR
 
-Roger Pettett, E<lt>rmp@sanger.ac.ukE<gt>
+=over
+
+=item Roger Pettett
+
+=item Marina Gourtovaia
+
+=back
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2008 GRL, by Roger Pettett
+Copyright (C) 2007-2012, 2013,2014,2018,2025 Genome Research Ltd.
 
 This file is part of NPG.
 
